Changed Store URL to sethakkerman.bigcartel
Changed Store URL to sethakkerman.bigcartel

--- a/wildthings.html
+++ b/wildthings.html
@@ -14,25 +14,23 @@
 
 </head>
 
-<body>
-<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" -->
-<nav>
-  <h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
-  <div class="naviconwrap"> <a class="navicon-button x">
-    <div class="navicon"></div>
-  </a> </div>
-  <div class="site-nav-wrapper">
-    <ul class="site-nav">
-      <li><a class="current" href="index.html">Projects</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="http://pseudosuede.bigcartel.com/" target="_blank">Shop</a></li>
-      <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
-    </ul>
-  </div>
-</nav>
-<!-- #EndLibraryItem -->
-<div class="main-wrapper">
+<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
+	<div class="naviconwrap">
+ 		<a class="navicon-button x">
+      	<div class="navicon"></div>
+    	</a>
+    </div>
+	<div class="site-nav-wrapper">
+		<ul class="site-nav">
+			<li><a class="current" href="index.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
+            <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
+		</ul>
+	</div>
+</nav><!-- #EndLibraryItem --><div class="main-wrapper">
   <div class="poster">
 	<div class="poster-image">
 		<img height="960" width="1440" src="assets/images/wildthings_poster.jpg" alt="Poster image showing a screen capture from my version of the Where the Wild Things Are title sequence." >
