--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 			<li><a href="index.html">Projects</a></li>
             <li><a class="current" href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="http://pseudosuede.bigcartel.com/" target="_blank">Shop</a></li>
+            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
