--- a/scadux.html
+++ b/scadux.html
@@ -26,7 +26,7 @@
 			<li><a class="current" href="index.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="http://pseudosuede.bigcartel.com/" target="_blank">Shop</a></li>
+            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
