Adjusted the Spacing on the Index Page
Adjusted the Spacing on the Index Page. Specifically the relationship
between the bottom of the thumbnail images and the bottom nav.

--- a/2012card.html
+++ b/2012card.html
@@ -71,7 +71,7 @@
     </article>
 	<p><a href="http://www.pseudosuede.com/holidays2012/" target="_blank">Visit 2012 Holiday Card Website &gt;</a></p>
 </section>
-<section class="column_content last-project-column">
+<section class="column_content">
     <div class="column-1-of-3">
         <img src="assets/images/2012holidaycard_process_01.jpg" alt="Process image from the 2012 Holiday Card project.">
     </div>
