--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </a>
     </div>
 </section>
-<section class="column_content">
+<section class="column_content last-project-column">
     <div class="left_container thumb-image">
         <a href="secession.html">
         <img src="assets/images/secession_thumb.jpg" alt="The thumbnail image for my Savannah Secession catalog.">
