Updated Project Write Ups
I updated the project write ups along with some slight CSS edits.

--- a/foolsquest.html
+++ b/foolsquest.html
@@ -45,7 +45,7 @@
 </section>
 <section class="column_content">
     <div class="project-callout-shell dark">
-        <p class="project-callout">The project logo suggests the exploratory nature of my runs. Most of the data you see on the website was dynamically populated using JavaScript.</p>
+        <p class="project-callout">I tried to incorporate as many personal items for Rowan as I could. For example, the ping-pong score is his wedding anniversary. The intersecting balls signify the wedding rings.</p>
     </div>
 </section>
 <div id="slider01" class="flexslider">
@@ -62,7 +62,7 @@
    	</ul>          
 </div>
 <section class="documentation">
-	<p>This music video is for the track <em>Fool's Quest</em> from the album Break Failure by Rowan Converse.</p>
+	<p>This music video is for the track <em>Fool's Quest</em> from the album Break Failure by Rowan Converse. I had never worked on a motion graphics project of this duration so it was fun to plan out the sequencing and ways to keep the video engaging. The most challenging part for me was visualizing a song without any lyrics. Since music is a very personal art form, I decided to use this video to help tell the story of Rowan. Throughout the scenes you can discover what kind of dog Rowan has, what kind of car he drives, and what his favorite bass guitar is, amongst other fun details. I will let you try to figure out the rest.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
 	<p class="project-detail-content">Motion Graphics</p>
