--- a/logos.html
+++ b/logos.html
@@ -57,17 +57,18 @@
     </div>
 </section>
 <section class="documentation">
-	<p>The Console.Logging Co. logo was an idea I had combining a browser tool web developers use and a designer's love of dressing for the outdoors. Much like our plaid-wearing brothers from other mothers, web folks are loggers too.</p>
-	<p>I started a printmaking crew called the Secret Society of Ink Slingers with friends from graduate school.</p>
+	<p>The Console.Logging Co. logo was an idea I had combining a browser tool web developers use and the stereotype that designers love dressing for the outdoors. Much like our plaid-wearing brothers from other mothers, web folks are loggers too.</p>
+    <p>The Cancer? I Don’t Even Know Her. logo was designed to be printed on a shirt and help raise money for people fighting the good fight. Two friends dealing with cancer within their own families helped me come to the realization that no matter what a person is going through, cancer or otherwise, they still have a personality that can shine through. While some people need warm sentiments, other folks just need a laugh. This logo is for them. It’s a pun on the classic “Poker? I don’t even know her” joke but also touches on the idea that cancer is still a mysterious beast.</p>
+	<p>I started a printmaking crew called the Secret Society of Ink Slingers with friends from graduate school. I would elaborate, but then it wouldn’t be secret, would it.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
 	<p class="project-detail-content">Identities</p>
 	<p class="project-detail-heading">Typefaces</p>
-	<p class="project-detail-content">Futura Std. Condensed and Futura Std. Bold / Univers LT Std – 49 Light Ultra Condensed</p>
+	<p class="project-detail-content">Various</p>
 	<p class="project-detail-heading">Production</p>
-	<p class="project-detail-content">4-Color Screen Print on a shirt / Digital</p>
+	<p class="project-detail-content">Sketching, Illustrator, Nit-picking</p>
     <p class="project-detail-heading">Materials</p>
-	<p class="project-detail-content">Fabric</p>
+	<p class="project-detail-content">Shirts, Stickers, Digital</p>
     <p class="project-detail-heading">Purchase</p>
 	<p class="project-detail-content"><a href="https://cottonbureau.com/products/consolelogging" target="_blank">Console.Logging Co. Shirt</a>, <a href="http://www.stickermule.com/marketplace/3244-console-dot-logging-co-die-cut-sticker" target="_blank">Console.Logging Co. Sticker</a>, <a href="https://cottonbureau.com/products/cancer-i-dont-even-know-her" target="_blank">Cancer? I Don't Even Know Her. Shirt</a></p>
     </article>
