--- a/secession.html
+++ b/secession.html
@@ -57,7 +57,7 @@
 </section>
 <img src="assets/images/secession_07.gif" alt="An animated GIF showing the result of viewing the profile images with the provided 3D glasses.">
 <section class="documentation">
-	<p>This campaign consisted of the postcard advertisements and gallery catalog for the graphic design department’s 2009 senior show. The juried work consisted of both graduate and undergraduate work. I was selected to be on the team to produce these elements.</p>
+	<p>This campaign consisted of the postcard advertisements and gallery catalog for the graphic design department’s 2009 senior show. The juried work consisted of both graduate and undergraduate work. I was selected to be on the team to produce these elements. In addition to designing the printed materials we were also responsible for organizing and hanging the work in the gallery.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
 	<p class="project-detail-content">Exhibition Catalog &amp; Design</p>
