--- a/spayandneuter.html
+++ b/spayandneuter.html
@@ -59,7 +59,7 @@
    	</ul>          
 </div>
 <section class="documentation">
-	<p>This project was completed for SF Weekly. The goal of the project was to create a companion piece to go along with a cover story they published regarding stray cats in San Francisco. I chose to take a humorous approach to the commercial. A draft version was featured in IdN Magazine, Volume 17, Number 5, 2010.</p>
+	<p>This project was completed for SF Weekly. The goal of the project was to create a companion piece to go along with a cover story they published regarding stray cats in San Francisco. I chose to take a humorous approach. A draft version was featured in IdN Magazine, Volume 17, Number 5, 2010.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
 	<p class="project-detail-content">Motion Graphics</p>
