Edited a Few Images and Tweaked CSS
Edited a Few Images and Tweaked CSS

--- a/logos.html
+++ b/logos.html
@@ -68,10 +68,10 @@
     </div>
 </section>
 <section class="column_content">
-    <div class="left_container project-callout-shell">
+    <div class="left_container project-callout-shell logo-color">
         <img src="assets/images/logos_04.png" alt="A Console.Logging Co. sticker is available through Sticker Mule.">
     </div>
-    <div class="right_container project-callout-shell">
+    <div class="right_container project-callout-shell logo-color">
         <img src="assets/images/logos_05.png" alt="A Console.Logging Co. t-shirt is available through Cotton Bureau.">
     </div>
 </section>
