--- a/scadux.html
+++ b/scadux.html
@@ -59,7 +59,7 @@
 <h2 class="title">SCAD UX Theory Course</h2>
 <p class="project-types">Illustration</p>
 </header>
-<div id="slider01" class="flexslider">
+<div id="slider01" class="flexslider white-bg">
   	<ul class="slides">
  		<li><img src="assets/images/scadux_01.jpg" alt="A thanksgiving illustration conveying perception and sensation."></li>
 		<li><img src="assets/images/scadux_02.jpg" alt="A mail illustration conveying that people use known processes to learn new ones."></li>
@@ -67,15 +67,15 @@
         <li><img src="assets/images/scadux_04.jpg" alt="A soft serve ice cream illustration conveying that user's have many choices when making decisions."></li>
    	</ul>          
 </div>
-<section class="column_content">
+<section class="column_content scadux">
     <div class="column-1-of-3">
-        <img src="assets/images/scadux_05.jpg" alt="A german shepherd anecdotal illustration.">
+        <img class="small-illustrations" src="assets/images/scadux_05.png" alt="A german shepherd anecdotal illustration.">
     </div>
     <div class="column-2-of-3">
-        <img src="assets/images/scadux_06.jpg" alt="An e-mail signature anecdotal illustration.">
+        <img class="small-illustrations" src="assets/images/scadux_06.png" alt="An e-mail signature anecdotal illustration.">
     </div>
     <div class="column-3-of-3">
-        <img src="assets/images/scadux_07.jpg" alt="A suspicious man anecdotal illustration.">
+        <img class="small-illustrations" src="assets/images/scadux_07.png" alt="A suspicious man anecdotal illustration.">
     </div>
 </section>
 <section class="documentation">
