--- a/telfairball.html
+++ b/telfairball.html
@@ -59,7 +59,7 @@
 <h2 class="title">Telfair Ball</h2>
 <p class="project-types">Invitation Set, Identity</p>
 </header>
-<div id="slider01" class="flexslider">
+<div id="slider01" class="flexslider white-bg">
   	<ul class="slides">
  		<li><img src="assets/images/telfairball_01.jpg" alt="The complete invitation set a patron would receive in the mail."></li>
 		<li><img src="assets/images/telfairball_02.jpg" alt="A vellum overlay was used to thank sponsors while suggesting a hidden party beneath."></li>
