--- a/about.html
+++ b/about.html
@@ -102,24 +102,20 @@
 
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
-</section>
-<!-- #BeginLibraryItem "/Library/Footer.lbi" -->
-<footer>
-  <h2 class="title">Contact</h2>
-  <ul>
-    <li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
-    <li><a href="https://twitter.com/sethakkerman" target="_blank">@sethakkerman</a></li>
-    <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
-  </ul>
-  <p class="copyright">2006 &ndash;
-    <script type="text/javascript">
+</section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
+	<h2 class="title">Contact</h2>
+    <ul>
+    	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
+        <li><a href="https://twitter.com/sethakkerman" target="_blank">@sethakkerman</a></li>
+        <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
+        <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
+    </ul>
+    <p class="copyright">2006 &ndash; <script type="text/javascript">
         var d=new Date();
         yr=d.getFullYear();
                 document.write(yr);
-        </script>
-    Seth Akkerman</p>
-</footer>
-<!-- #EndLibraryItem --> </div>
+        </script> Seth Akkerman</p>
+</footer><!-- #EndLibraryItem --></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
