--- a/secession.html
+++ b/secession.html
@@ -107,6 +107,7 @@
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://twitter.com/sethakkerman" target="_blank">@sethakkerman</a></li>
         <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
+        <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">2006 &ndash; <script type="text/javascript">
         var d=new Date();
