Added Meta Tags.
Added Meta Tags.

--- a/scadux.html
+++ b/scadux.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>SCAD UX Theory Course</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Seth Akkerman is a product and interactive designer who likes to laugh with people.">
 <link href="assets/styles/main.css" rel="stylesheet" type="text/css">
 
 <script src="assets/js/modernizr.custom.01854.js"></script>
