--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,15 @@
 	</div>
 </nav>
 <div class="main-wrapper">
+<div class="poster">
+	<div class="poster-image">
+		<img height="1238" width="2200" src="assets/images/contact_poster.jpg" alt="Poster image showing some pigeons being released on a quest to deliver messages." >
+  	</div>
+</div>
 <header>
 <h2 class="title">Contact</h2>
-<p>If the contact methods below are not quite what you were looking for (ex. singing telegram, carrier pigeon routes, in-person secret handshake) feel free to sign-up for the mailing list. I will periodically send out updates to what I am working on.</p>
+<p>If the contact methods in the footer of this page are not quite what you were looking for (ex. singing telegram, carrier pigeon routes, in-person secret handshake), feel free to sign-up for the mailing list. I will periodically send out updates to what I am working on.</p>
+<p class="photo-credit">Image via <a href="http://www.loc.gov/pictures/item/ggb2005018491/" target="_blank">The Library of Congress Creative Commons Gallery</a></p>
 </header>
 <section class="documentation">
 <h3 class="title">Subscribe</h3>
