--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <p>I am a product and interactive designer who likes to laugh with people.</p>
 </header>
 <section class="column_content">
-    <div class="left_container thumb-image">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="2014running.html">
         <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
         <div class="thumb-text-wrap">
@@ -71,7 +71,7 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image">
+    <div class="right_container thumb-image thumb-image-right">
         <a href="2012card.html">
         <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
         <div class="thumb-text-wrap">
@@ -82,7 +82,7 @@
     </div>
 </section>
 <section class="column_content">
-    <div class="left_container thumb-image">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="telfairball.html">
         <img src="assets/images/telfairball_thumb.jpg" alt="The thumbnail image for my Telfair Ball identity and invitation set.">
         <div class="thumb-text-wrap">
@@ -91,7 +91,7 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image">
+    <div class="right_container thumb-image thumb-image-right">
         <a href="foolsquest.html">
         <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
         <div class="thumb-text-wrap">
@@ -102,7 +102,7 @@
     </div>
 </section>
 <section class="column_content">
-    <div class="left_container thumb-image">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="logos.html">
         <img src="assets/images/logos_thumb.png" alt="The thumbnail image representing my logo projects.">
         <div class="thumb-text-wrap">
@@ -111,7 +111,7 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image">
+    <div class="right_container thumb-image thumb-image-right">
         <a href="scadux.html">
         <img src="assets/images/scaduxtheory_thumb.jpg" alt="The thumbnail image for my SCAD UX theory course project.">
         <div class="thumb-text-wrap">
@@ -122,7 +122,7 @@
     </div>
 </section>
 <section class="column_content">
-    <div class="left_container thumb-image">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="fowlapproach.html">
         <img src="assets/images/fowlapproach_thumb.jpg" alt="The thumbnail image for a woodcut print regarding bird hunting.">
         <div class="thumb-text-wrap">
@@ -131,7 +131,7 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image">
+    <div class="right_container thumb-image thumb-image-right">
         <a href="mikedoughty.html">
         <img src="assets/images/mikedoughty_thumb.jpg" alt="The thumbnail image for my Mike Doughty illustration.">
         <div class="thumb-text-wrap">
@@ -142,7 +142,7 @@
     </div>
 </section>
 <section class="column_content last-project-column">
-    <div class="left_container thumb-image">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="secession.html">
         <img src="assets/images/secession_thumb.jpg" alt="The thumbnail image for my Savannah Secession catalog.">
         <div class="thumb-text-wrap">
@@ -151,7 +151,7 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image">
+    <div class="right_container thumb-image thumb-image-right">
         <a href="spayandneuter.html">
         <img src="assets/images/spayandneuter_thumb.jpg" alt="The thumbnail image for my SF Weekly Spay and Neuter PSA.">
         <div class="thumb-text-wrap">
