Updated my Typekit to the https version and edited some grammar.
Updated my Typekit to the https version and edited some grammar.

--- a/errors/notfound.html
+++ b/errors/notfound.html
@@ -11,8 +11,8 @@
 
 <script src="../assets/js/modernizr.custom.01854.js"></script>
 
-<script src="//use.typekit.net/too6jej.js"></script>
-<script>try{Typekit.load();}catch(e){}</script>
+<script src="https://use.typekit.net/too6jej.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 <!-- For non-Retina (@1× display) iPhone, iPod Touch, and Android 2.1+ devices: -->
 <link rel="apple-touch-icon-precomposed" href="assets/touch_icons/apple-touch-icon-precomposed.png"><!-- 57×57px -->
