--- a/spayandneuter.html
+++ b/spayandneuter.html
@@ -11,8 +11,8 @@
 
 <script src="assets/js/modernizr.custom.01854.js"></script>
 
-<script src="//use.typekit.net/too6jej.js"></script>
-<script>try{Typekit.load();}catch(e){}</script>
+<script src="https://use.typekit.net/too6jej.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 <!-- For non-Retina (@1× display) iPhone, iPod Touch, and Android 2.1+ devices: -->
 <link rel="apple-touch-icon-precomposed" href="assets/touch_icons/apple-touch-icon-precomposed.png"><!-- 57×57px -->
@@ -80,18 +80,18 @@
    	</ul>          
 </div>
 <section class="documentation">
-	<p>This project was completed for SF Weekly. The goal of the project was to create a companion piece to go along with a cover story they published regarding stray cats in San Francisco. I chose to take a humorous approach. A draft version was featured in IdN Magazine, Volume 17, Number 5, 2010.</p>
+	<p>This project was completed for <em>SF Weekly</em>. The goal of the project was to create a companion piece to go along with a cover story they published regarding stray cats in San Francisco. I chose to take a humorous approach. A draft version was featured in IdN Magazine, Volume 17, Number 5, 2010.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
 	<p class="project-detail-content">Motion Graphics</p>
     <p class="project-detail-heading">Client</p>
-	<p class="project-detail-content">SF Weekly</p>
+	<p class="project-detail-content"><em>SF Weekly</em></p>
 	<p class="project-detail-heading">Typeface</p>
 	<p class="project-detail-content">Archer</p>
 	<p class="project-detail-heading">Production</p>
 	<p class="project-detail-content">Asking friends for pet photographs -&gt; Writing / Recording Song -&gt; After Effects</p>
     <p class="project-detail-heading">Featured</p>
-	<p class="project-detail-content"><a href="http://idnworld.com/video/?id=v17n5" target="_blank">IdN Magazine, Volume 17, Number 5, 2010</a></p>
+	<p class="project-detail-content"><a href="http://idnworld.com/video/?id=v17n5" target="_blank"><em>IdN Magazine</em>, Volume 17, Number 5, 2010</a></p>
     </article>
 </section>
 <img src="assets/images/spayandneuter_07.jpg" alt="A photograph of the PSA featured in IdN Magazine.">
