Added a portfolio page for The Akkermans! project.
Added a portfolio page for The Akkermans! project.

--- a/2014running.html
+++ b/2014running.html
@@ -92,7 +92,7 @@
 </section>
 <img src="assets/images/2014running_04.jpg" alt="An image of the watch I used to capture my running data.">
 <section class="bottom-nav">
-	<a href="spayandneuter.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="theakkermans.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="2012card.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
