--- a/foolsquest.html
+++ b/foolsquest.html
@@ -105,7 +105,7 @@
 </section>
 <img src="assets/images/foolsquest_process_01.jpg" alt="An screen capture of the After Effects project keyframes used to create the animation.">
 <section class="bottom-nav">
-	<a href="telfairball.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="2012card.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="logos.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
