--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
 </header>
 <section class="column_content">
     <div class="left_container thumb-image thumb-image-left">
+        <a href="theakkermans.html">
+        <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
+        <div class="thumb-text-wrap">
+        <h3 class="title">The Akkermans!</h3>
+        <p class="project-types">Website, Digital Calling Card</p>
+        </div>
+        </a>
+    </div>
+    <div class="right_container thumb-image thumb-image-right">
         <a href="2014running.html">
         <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
         <div class="thumb-text-wrap">
@@ -71,23 +80,14 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image thumb-image-right">
+</section>
+<section class="column_content">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="2012card.html">
         <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
         <div class="thumb-text-wrap">
         <h3 class="title">2012 Holiday Card</h3>
         <p class="project-types">Website, Photography</p>
-        </div>
-        </a>
-    </div>
-</section>
-<section class="column_content">
-    <div class="left_container thumb-image thumb-image-left">
-        <a href="telfairball.html">
-        <img src="assets/images/telfairball_thumb.jpg" alt="The thumbnail image for my Telfair Ball identity and invitation set.">
-        <div class="thumb-text-wrap">
-        <h3 class="title">Telfair Ball</h3>
-        <p class="project-types">Invitation Set, Identity</p>
         </div>
         </a>
     </div>
@@ -112,11 +112,11 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="scadux.html">
-        <img src="assets/images/scaduxtheory_thumb.jpg" alt="The thumbnail image for my SCAD UX theory course project.">
+        <a href="telfairball.html">
+        <img src="assets/images/telfairball_thumb.jpg" alt="The thumbnail image for my Telfair Ball identity and invitation set.">
         <div class="thumb-text-wrap">
-        <h3 class="title">SCAD UX Theory Course</h3>
-        <p class="project-types">Illustration</p>
+        <h3 class="title">Telfair Ball</h3>
+        <p class="project-types">Invitation Set, Identity</p>
         </div>
         </a>
     </div>
@@ -132,10 +132,10 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="mikedoughty.html">
-        <img src="assets/images/mikedoughty_thumb.jpg" alt="The thumbnail image for my Mike Doughty illustration.">
+        <a href="scadux.html">
+        <img src="assets/images/scaduxtheory_thumb.jpg" alt="The thumbnail image for my SCAD UX theory course project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Mike Doughty Owl Illustration</h3>
+        <h3 class="title">SCAD UX Theory Course</h3>
         <p class="project-types">Illustration</p>
         </div>
         </a>
@@ -143,11 +143,11 @@
 </section>
 <section class="column_content last-project-column">
     <div class="left_container thumb-image thumb-image-left">
-        <a href="secession.html">
-        <img src="assets/images/secession_thumb.jpg" alt="The thumbnail image for my Savannah Secession catalog.">
+        <a href="mikedoughty.html">
+        <img src="assets/images/mikedoughty_thumb.jpg" alt="The thumbnail image for my Mike Doughty illustration.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Savannah Secession</h3>
-        <p class="project-types">Exhibition Catalog &amp; Design</p>
+        <h3 class="title">Mike Doughty Owl Illustration</h3>
+        <p class="project-types">Illustration</p>
         </div>
         </a>
     </div>
