--- a/theakkermans.html
+++ b/theakkermans.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>SCAD UX Theory Course</title>
+<title>The Akkermans!</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,52 +54,42 @@
 </nav><!-- #EndLibraryItem --><div class="main-wrapper">
   <div class="poster">
 	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/scadux_poster.jpg" alt="Poster image the solar system illustration. It conveyed a user's mental models." >
+		<img height="1080" width="1920" src="assets/images/theakkermans_poster.jpg" alt="Poster image showing the gradient and A mark used on The Akkermans website." >
   	</div>
 </div>
 <header>
-<h2 class="title">SCAD UX Theory Course</h2>
-<p class="project-types">Illustration</p>
+<h2 class="title">The Akkermans!</h2>
+<p class="project-types">Website, Digital Calling Card</p>
 </header>
-<div id="slider01" class="flexslider white-bg">
-  	<ul class="slides">
- 		<li><img src="assets/images/scadux_01.jpg" alt="A thanksgiving illustration conveying perception and sensation."></li>
-		<li><img src="assets/images/scadux_02.jpg" alt="A mail illustration conveying that people use known processes to learn new ones."></li>
-      	<li><img src="assets/images/scadux_03.jpg" alt="A cloud illustration conveying the concept that the whole is greater than the sum of its parts."></li>
-        <li><img src="assets/images/scadux_04.jpg" alt="A soft serve ice cream illustration conveying that user's have many choices when making decisions."></li>
-   	</ul>          
-</div>
-<section class="column_content scadux">
-    <div class="column-1-of-3">
-        <img class="small-illustrations" src="assets/images/scadux_05.png" alt="A german shepherd anecdotal illustration.">
+<img src="assets/images/theakkermans_01.jpg" alt="The Akkermans website as viewed on a laptop and an iPad to show the different gradient orientations.">
+<section class="column_content">
+    <div class="left_container theakkermans">
+        <img src="assets/images/theakkermans_02.jpg" alt="A compilation of screen captures showing the different friend mode color gradient options.">
     </div>
-    <div class="column-2-of-3">
-        <img class="small-illustrations" src="assets/images/scadux_06.png" alt="An e-mail signature anecdotal illustration.">
-    </div>
-    <div class="column-3-of-3">
-        <img class="small-illustrations" src="assets/images/scadux_07.png" alt="A suspicious man anecdotal illustration.">
+    <div class="right_container project-callout-shell theakkermans">
+        <p class="project-callout">There is a toggle button for a “friend mode” which swaps content and constantly fluctuates between different gradient combinations.</p>
     </div>
 </section>
 <section class="documentation">
-	<p>I worked with a course developer and an instructional designer to develop these illustrations for a SCAD Graphic Design course on User Experience Theory. Once the content was written, we discussed what illustrations would be necessary to help supplement the written content. All the illustrations helped to conceptually demonstrate topics relating to user experience theory. The blue color palette was established by the course banner system. The Thanksgiving illustration represented perception and sensation. The solar system illustration represented mental models. The cloud illustration conveys that the whole is greater than the parts. The three circular illustrations pair with anecdotal case studies.</p>
+	<p>Sure, we each have our own portfolio websites, but this day and age you need to snatch up a good web domain when you find one. In our case, there were none more important than theakkermans.com. Since I focus on web design and development my wife gave me free rein to design and build something I believe fits our personalities and combines our individual brands. For one, her colors are orange and blue, while mine are orange and green. After eliminating the duplicate orange, I created a background gradient that spanned from her blue to my green. This also helps convey a chill, relaxed vibe that we try to channel in our daily lives. For a more conceptual detail, the gradient will change its orientation to match the orientation of the profile images. When viewed on large screens it extends from the upper-left to the lower-right, but when the profiles are stacked, the gradient changes to a linear top-to-bottom direction.</p>
+    <p>To add an additional challenge, I tried to write all the scripts for this website using pure JavaScript. I have been so reliant on jQuery lately that I wanted to make sure I could figure out how to translate my idea back to JavaScript without needing to compromise my design. It also helped reduce the number of items to load during the page rendering since I wouldn’t need the jQuery library in addition to the custom script.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
-	<p class="project-detail-content">Illustration</p>
-    <p class="project-detail-heading">Client</p>
-	<p class="project-detail-content">SCAD eLearning</p>
+	<p class="project-detail-content">Website, Digital Calling Card</p>
 	<p class="project-detail-heading">Typefaces</p>
-	<p class="project-detail-content">Futura Std Bold, Bell Gothic Bold</p>
+	<p class="project-detail-content">Abril Fatface, Open Sans, Social Media Icons</p>
 	<p class="project-detail-heading">Production</p>
-	<p class="project-detail-content">Digital Illustrations using Photoshop and Illustrator</p>
-    <p class="project-detail-heading">Size</p>
-	<p class="project-detail-content">Initial Required Loading Size was 500px Wide</p>
+	<p class="project-detail-content">JavaScript, Color Mixing, Spousal Compromise</p>
+	<p class="project-detail-heading">Size</p>
+	<p class="project-detail-content">Responsive</p>
     </article>
+	<p><a href="http://theakkermans.com/" target="_blank">Visit The Akkermans! Website &gt;</a></p>
 </section>
-<img src="assets/images/scadux_08.jpg" alt="Sketches for the user experience illustrations.">
+<img src="assets/images/theakkermans_03.jpg" alt="An information graphic showing how the gradient orientation changes to match the profile image orientation.">
 <section class="bottom-nav">
-	<a href="fowlapproach.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="spayandneuter.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="mikedoughty.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="2014running.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
 	<h2 class="title">Contact</h2>
     <ul>
@@ -118,22 +108,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
 <script src="assets/js/min/mule-poster-cropper-min.js"></script>
-
-<script src="assets/js/min/jquery.easing-min.js"></script>
-<script src="assets/js/min/jquery.flexslider-min.js"></script>
-<script type="text/javascript">
-
-$(document).ready(function() {
-	
-	$('#slider01').flexslider({
-		animation: "fade",
-		slideshowSpeed: 3000,
-		animationDuration: 500,
-		directionNav: false,
-		multipleKeyboard: true
-	});
-});
-</script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
