--- a/spayandneuter.html
+++ b/spayandneuter.html
@@ -96,9 +96,9 @@
 </section>
 <img src="assets/images/spayandneuter_07.jpg" alt="A photograph of the PSA featured in IdN Magazine.">
 <section class="bottom-nav">
-	<a href="secession.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="mikedoughty.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="2014running.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="theakkermans.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
 	<h2 class="title">Contact</h2>
     <ul>
