Finished the Process Documentation Page.
Finished the Process Documentation Page.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
         </a>
     </div>
 </section>
+<section class="documentation">
+	<p style="text-align:center; max-width:100%;"><a href="process.html">Curious About My Process? &gt;</a></p>
+</section>
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
