--- a/process.html
+++ b/process.html
@@ -54,7 +54,7 @@
 </nav><!-- #EndLibraryItem --><div class="main-wrapper">
   <div class="poster">
 	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/fowlapproach_poster.jpg" alt="Poster image showing the Fowl Approach to Bird Watching print being held." >
+		<img height="1238" width="2200" src="assets/images/process_poster.jpg" alt="Poster image showing sketches of what would eventually become my new portfolio website." >
   	</div>
 </div>
 <header>
@@ -124,11 +124,10 @@
 <img src="assets/images/process_06.jpg" alt="A Photoshop mockup used in the making of sethakkerman.com.">
 	</div>
 </section>
-<img src="assets/images/fowlapproach_03.jpg" alt="A photograph of the blue plate used to print Fowl Approach to Bird Watching.">
+<img src="assets/images/process_07.jpg" alt="An image of the paper notecards I use for initial wireframing.">
 <section class="bottom-nav">
-	<a href="scadux.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="index.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Home</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="mikedoughty.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
 	<h2 class="title">Contact</h2>
     <ul>
