Updated some resume items
Updated some resume items.

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h2 class="title">About</h2>
-<p>I am a product and interactive designer who likes to laugh with people.</p>
+<p>I am an interactive and digital designer who likes to laugh with people.</p>
 <p class="photo-credit">Portrait via The Hasselblad Photo Booth at The Museum of Arts and Design (MAD).</p>
 </header>
 <section class="documentation">
