--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 <header>
 <h2 class="title">Featured Projects</h2>
-<p>I am a product and interactive designer who likes to laugh with people.</p>
+<p>I am an interactive and digital designer who likes to laugh with people.</p>
 </header>
 <section class="column_content">
     <div class="left_container thumb-image thumb-image-left">
