Updated Description Details for my Running Visualization Website
Updated Description Details for my Running Visualization Website.

--- a/2014running.html
+++ b/2014running.html
@@ -59,7 +59,7 @@
 </div>
 <header>
 <h2 class="title">2014 Running</h2>
-<p class="project-types">Website, Database</p>
+<p class="project-types">Website, Data Visualization</p>
 </header>
 <section class="column_content">
     <div class="left_container running">
@@ -75,7 +75,7 @@
 	<p>I really enjoy running. I never used to enjoy running until I discovered that I could capture and organize data with fancy watches (also, I like food, so the calorie offset doesn’t hurt). I like running because I like being outside. It’s a good place to think. In 2013 my goal was to run 500 miles. After logging 520 miles, I wanted to push myself even more in 2014. I set that goal at 749 miles. Conceptually it is the distance from where I currently live to where I grew up. To keep track of my goal in 2013 I made a basic text website to help keep track of whether I was on pace or needed to catch up. Since I already had the basic JavaScript solved, I decided to create a more visually engaging version so others could follow along.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
-	<p class="project-detail-content">Website</p>
+	<p class="project-detail-content">Website, Data Visualization</p>
 	<p class="project-detail-heading">Typefaces</p>
 	<p class="project-detail-content">JAF Facit, Artill Weather Icons</p>
 	<p class="project-detail-heading">Production</p>
