--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
         <div class="thumb-text-wrap">
         <h3 class="title">2014 Running</h3>
-        <p class="project-types">Website, Database</p>
+        <p class="project-types">Website, Data Visualization</p>
         </div>
         </a>
     </div>
