Edited Process Page to Fix Video Centering Issue
Edited Process Page to Fix Video Centering Issue.

--- a/process.html
+++ b/process.html
@@ -98,12 +98,10 @@
 <h3 class="title">Refined Wireframe Preview</h3>
 	<p>I have been experimenting with using the Invision App platform for prototyping the refined wireframe I designed in Adobe Illustrator. After I exported the necessary still images it only took me about ten minutes from the time I signed up to create what you see above.</p>
 </section>
-<section class="column_content">
-    <div class="project-callout-shell">
-<section class="embedded_video">
-	<figure><iframe style="display:block;" src="https://player.vimeo.com/video/125103463?color=ffffff&title=0&byline=0&portrait=0" width="700" height="438" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
-</section>
-	</div>
+<section class="project-callout-shell">
+	<div class="embedded_video">
+    	<figure><iframe style="display:block;" src="https://player.vimeo.com/video/125103463?color=ffffff&title=0&byline=0&portrait=0" width="700" height="438" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
+   	</div>
 </section>
 <section class="documentation process">
 <h3 class="title">Individual Page Pacing Diagram</h3>
