Various Text Updates. Increased Opacity on Full Screen Nav.
Various Text Updates. Increased Opacity on Full Screen Nav.

--- a/about.html
+++ b/about.html
@@ -91,14 +91,15 @@
         </ul>   
    	<h3 class="title">Exhibitions</h3> 
     	<ul>
-            <li><span class="darker-highlight">Telfair Art Fair</span> – Juried Open Art Exhibitor (November 2010, November 2009)</li>
+        	<li><span class="darker-highlight">2nd Annual Savannah GIF Festival</span> (January 2016)</li>
+            <li><span class="darker-highlight">Telfair Art Fair</span> (November 2010, November 2009)</li>
             <li><span class="darker-highlight">WTF? What’s the Function, What’s the Failure, What’s the Form Thesis Show</span> (May 2009)</li>
             <li><span class="darker-highlight">SCAD Savannah Secession Graphic Design Exhibition</span> (May 2009)</li>
         </ul>    
    	<h3 class="title">Professional Posse</h3> 
     	<ul>
-            <li><span class="darker-highlight">AIGA</span> – Member (2006 – present)</li>
-            <li><span class="darker-highlight">Type Directors Club</span> – Member (2008 – present)</li>
+            <li><span class="darker-highlight">AIGA</span> (2006 – present)</li>
+            <li><span class="darker-highlight">Type Directors Club</span> (2008 – present)</li>
         </ul>  
 </section>
 
