--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
 </section>
 <section class="documentation">
-	<p style="text-align:center; max-width:100%;"><a href="process.html">Curious About My Website Design Process? &gt;</a></p>
+	<p style="text-align:center; max-width:100%;"><a href="process.html">Curious about my process for building this website? &gt;</a></p>
 </section>
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
