Added the portfolio page for Absolute Horseradish
Added the portfolio page for Absolute Horseradish. Also updated the
index page and necessary back/next links throughout the website.

--- a/logos.html
+++ b/logos.html
@@ -96,9 +96,9 @@
 </section>
 <img src="assets/images/logos_06.jpg" alt="A Cancer? I don't even know her. t-shirt is available through Cotton Bureau.">
 <section class="bottom-nav">
-	<a href="foolsquest.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="2012card.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="telfairball.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="foolsquest.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
 	<h2 class="title">Contact</h2>
     <ul>
