--- a/theakkermans.html
+++ b/theakkermans.html
@@ -87,7 +87,7 @@
 </section>
 <img src="assets/images/theakkermans_03.jpg" alt="An information graphic showing how the gradient orientation changes to match the profile image orientation.">
 <section class="bottom-nav">
-	<a href="spayandneuter.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="absolutehorseradish.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="2014running.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
