--- a/2012card.html
+++ b/2012card.html
@@ -106,7 +106,7 @@
 <section class="bottom-nav">
 	<a href="2014running.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="foolsquest.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="logos.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
 	<h2 class="title">Contact</h2>
     <ul>
