--- a/fowlapproach.html
+++ b/fowlapproach.html
@@ -91,7 +91,7 @@
 </section>
 <img src="assets/images/fowlapproach_03.jpg" alt="A photograph of the blue plate used to print Fowl Approach to Bird Watching.">
 <section class="bottom-nav">
-	<a href="telfairball.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="foolsquest.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="scadux.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
