--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
 </header>
 <section class="column_content">
     <div class="left_container thumb-image thumb-image-left">
+        <a href="absolutehorseradish.html">
+        <img src="assets/images/absolutehorseradish_thumb.jpg" alt="The thumbnail image for the Absolute Horseradish zine and website project.">
+        <div class="thumb-text-wrap">
+        <h3 class="title">Absolute Horseradish</h3>
+        <p class="project-types">Website, Zine</p>
+        </div>
+        </a>
+    </div>
+    <div class="right_container thumb-image thumb-image-right">
         <a href="theakkermans.html">
         <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
         <div class="thumb-text-wrap">
@@ -71,7 +80,9 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image thumb-image-right">
+</section>
+<section class="column_content">
+    <div class="left_container thumb-image thumb-image-left">
         <a href="2014running.html">
         <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
         <div class="thumb-text-wrap">
@@ -80,23 +91,12 @@
         </div>
         </a>
     </div>
-</section>
-<section class="column_content">
-    <div class="left_container thumb-image thumb-image-left">
+    <div class="right_container thumb-image thumb-image-right">
         <a href="2012card.html">
         <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
         <div class="thumb-text-wrap">
         <h3 class="title">2012 Holiday Card</h3>
         <p class="project-types">Website, Photography</p>
-        </div>
-        </a>
-    </div>
-    <div class="right_container thumb-image thumb-image-right">
-        <a href="foolsquest.html">
-        <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
-        <div class="thumb-text-wrap">
-        <h3 class="title">Fool's Quest</h3>
-        <p class="project-types">Motion Graphics, Music Video</p>
         </div>
         </a>
     </div>
@@ -112,11 +112,11 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="telfairball.html">
-        <img src="assets/images/telfairball_thumb.jpg" alt="The thumbnail image for my Telfair Ball identity and invitation set.">
+        <a href="foolsquest.html">
+        <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Telfair Ball</h3>
-        <p class="project-types">Invitation Set, Identity</p>
+        <h3 class="title">Fool's Quest</h3>
+        <p class="project-types">Motion Graphics, Music Video</p>
         </div>
         </a>
     </div>
@@ -152,11 +152,11 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="spayandneuter.html">
-        <img src="assets/images/spayandneuter_thumb.jpg" alt="The thumbnail image for my SF Weekly Spay and Neuter PSA.">
+        <a href="telfairball.html">
+        <img src="assets/images/telfairball_thumb.jpg" alt="The thumbnail image for my Telfair Ball identity and invitation set.">
         <div class="thumb-text-wrap">
-        <h3 class="title">SF Weekly PSA</h3>
-        <p class="project-types">Motion Graphics</p>
+        <h3 class="title">Telfair Ball</h3>
+        <p class="project-types">Invitation Set, Identity</p>
         </div>
         </a>
     </div>
