--- a/2014running.html
+++ b/2014running.html
@@ -51,26 +51,23 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1080" width="1920" src="assets/images/2014running_poster.jpg" alt="Poster image showing a highlight of the 2014 Running website." >
-  	</div>
-</div>
+</nav><!-- #EndLibraryItem -->
+<div class="main-wrapper">
 <header>
 <h2 class="title">2014 Running</h2>
 <p class="project-types">Website, Data Visualization</p>
 </header>
+<img src="assets/images/2014running_03.jpg" alt="The complete 2014 Running website.">
 <section class="column_content">
-    <div class="left_container running">
-        <img src="assets/images/2014running_01.png" alt="The logo for my 2014 Running website project representing exploratory running routes.">
-    </div>
-    <div class="right_container project-callout-shell running">
+    <div class="left_container project-callout-shell running">
         <p class="project-callout">The project logo suggests the exploratory nature of my runs. Most of the data you see on the website was dynamically populated using JavaScript.</p>
+    </div>
+    <div class="right_container running">
+        <img src="assets/images/2014running_01.png" alt="The logo for my 2014 Running website project representing exploratory running routes.">
     </div>
 </section>
 <img src="assets/images/2014running_02.jpg" alt="The 2014 Running website as viewed on a laptop.">
-<img class="natural-img-img" src="assets/images/2014running_03.jpg" alt="The complete 2014 Running website.">
+<img class="natural-img-img" src="assets/images/2014running_poster.jpg" alt="Poster image showing a highlight of the 2014 Running website." >
 <section class="documentation">
 	<p>I really enjoy running. I never used to enjoy running until I discovered that I could capture and organize data with fancy watches (also, I like food, so the calorie offset doesn’t hurt). I like running because I like being outside. It’s a good place to think. In 2013 my goal was to run 500 miles. After logging 520 miles, I wanted to push myself even more in 2014. I set that goal at 749 miles. Conceptually it is the distance from where I currently live to where I grew up. To keep track of my goal in 2013 I made a basic text website to help keep track of whether I was on pace or needed to catch up. Since I already had the basic JavaScript solved, I decided to create a more visually engaging version so others could follow along.</p>
 	<article>
@@ -91,6 +88,7 @@
 <button class="show-me-more">Read More</button>
 </section>
 <img src="assets/images/2014running_04.jpg" alt="An image of the watch I used to capture my running data.">
+</div>
 <section class="bottom-nav">
 	<a href="theakkermans.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -103,16 +101,11 @@
         <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
-    <p class="copyright">2006 &ndash; <script type="text/javascript">
-        var d=new Date();
-        yr=d.getFullYear();
-                document.write(yr);
-        </script> Seth Akkerman</p>
-</footer><!-- #EndLibraryItem --></div>
+    <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
+</footer><!-- #EndLibraryItem -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
-<script src="assets/js/min/mule-poster-cropper-min.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
