--- a/foolsquest.html
+++ b/foolsquest.html
@@ -116,11 +116,7 @@
         <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
-    <p class="copyright">2006 &ndash; <script type="text/javascript">
-        var d=new Date();
-        yr=d.getFullYear();
-                document.write(yr);
-        </script> Seth Akkerman</p>
+    <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
 </footer><!-- #EndLibraryItem --></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
