--- a/index.html
+++ b/index.html
@@ -52,14 +52,9 @@
 		</ul>
 	</div>
 </nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/index_poster.jpg" alt="Index page poster image highlighting some recent projects." >
-  	</div>
-</div>
 <header>
 <h2 class="title">Featured Projects</h2>
-<p>I am an interactive and digital designer who likes to laugh with people.</p>
+<p>A collection of websites, data visualizations, and illustrations.</p>
 </header>
 <section class="column_content">
     <div class="left_container thumb-image thumb-image-left">
@@ -164,6 +159,7 @@
 <section class="documentation">
 	<p style="text-align:center; max-width:100%;"><a href="process.html">Curious about my process for building this website? &gt;</a></p>
 </section>
+</div>
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
@@ -174,16 +170,9 @@
         <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
-    <p class="copyright">2006 &ndash; <script type="text/javascript">
-        var d=new Date();
-        yr=d.getFullYear();
-                document.write(yr);
-        </script> Seth Akkerman</p>
-</footer><!-- #EndLibraryItem --></div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
+</footer><!-- #EndLibraryItem --><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
-<script src="assets/js/min/mule-poster-cropper-min.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
